# transfer_pics_cpp

./: ASCII.cpp  ASCII.py  ASCII_Single.cpp  CMakeLists.txt  README.md  ascii_renderer.cpp  ascii_renderer.h  ascii_to_image.cpp  ascii_to_pdf.cpp  bash.sh  common_types.h  config.ini  config.json  config.txt  config_handler.cpp  config_handler.h  image_converter.cpp  image_converter.h  main.cpp  pixel.cpp  stb_image_resize2.h
archived_code/: ascii_to_image.cpp
config/: config.json
docs/: README.md
src/: ascii_renderer.cpp  ascii_renderer.h  common_types.h  config_handler.cpp  config_handler.h  image_converter.cpp  main.cpp
src/app/: application.cpp  application.h
src/common/: common_types.h  pch.cpp  pch.h  stb_impl.cpp
src/config/: config_handler.cpp  config_handler.h
src/conversion/: image_converter.cpp  image_converter.h
src/core/: processing_orchestrator.cpp  processing_orchestrator.h
src/rendering/: HtmlRenderer.cpp  HtmlRenderer.h  IRenderer.h  PngRenderer.cpp  PngRenderer.h  ascii_renderer.cpp  ascii_renderer.h
src/ui/: cli_handler.cpp  cli_handler.h
src/utils/: PathManager.cpp  PathManager.h
